--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         .navbar-nav .nav-link{
             margin-left: 13px;
         }
+        
+        .nav2 ul li a{
+            
+        color:white;
+        }
 
         .links ul li{
             padding-left: 15px;
@@ -269,19 +274,19 @@
           <a class="nav-link active" aria-current="page" href="#" style="color:orangered">Company Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" style="color:white;">Chairmen's Massage </a>
+          <a class="nav-link" href="#">Chairmen's Massage </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" style="color:white">Leadership</a>
+          <a class="nav-link" href="#" >Leadership</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#" style="color:white">Milestones</a>
+            <a class="nav-link" href="#" >Milestones</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" style="color:white">Awards</a>
+            <a class="nav-link" href="#" >Awards</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" style="color:white">Jubilant Baratiya Group</a>
+            <a class="nav-link" href="#" >Jubilant Baratiya Group</a>
           </li>
 
 
