--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
        .top-top{
 
         position: absolute;
-        top: 150px ;
+        top: 30px ;
         left: 100px;
 
                }
@@ -316,7 +316,7 @@
         <img src="12_Domino.jpg" alt="">
         <div class="col-md-6 top-top">
             <h2 class="display-5">
-                Dominos Pizza
+                Domino's Pizza
             </h2>
         </div>
     </div>
